--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -2,10 +2,10 @@
     "name": "@repo/db",
     "version": "0.0.0",
     "dependencies": {
-        "@prisma/client": "^5.11.0"
+        "@prisma/client": "^5.12.1"
     },
     "devDependencies": {
-        "prisma": "5.11.0"
+        "prisma": "^5.12.1"
     },
     "exports": {
         "./client": "./index.ts"
